host/crates/tui/tests/snapshots/snapshots__detail_small.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, SMALL, path_is(\"/api/sdk/init\"), \"l\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active
╭─ Network · all app traffic ────────────────────────── ━ Receiving 3.4 KB/s   ━ Sending 1.5 KB/s ─╮
│  16 KB/s                                                      ┊                                  │
│                                                               ┊        ┏┓                        │
│                                                               ┊        ┃┃                        │
│ 8.0 KB/s                                                      ┊        ┃┃           ┏┓           │
│                                                               ┊       ┏┛┗━━━━┓┏┓━━━┓┛┏━━┓   ┏━┓  │
│                                                               ━━┓┏━━━┓┛ ┏━━┓┏┗┛┗━┓┏┗┓┃┓┏┗┏━━┛┓┗━ │
│        0                                                      ━━┗┛   ┗━━┛  ┗┛    ┗┛ ┗┛┗┛┗┛   ┗┛  │
│                                                               00:00.000                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ init ─ Overview ─ Response ─ Request ─ Call Stack ────────────────────────────────────────── ✕ ─╮
│ HTTP/2 200 OK                                                                                    │
│                                                                                                  │
│ Headers (8)                                                                                      │
│ date: Tue, 29 Sep 2026 05:10:01 GMT                                                              │
│ content-type: application/json; charset=utf-8                                                    │
│ content-length: 316                                                                              │
│ cache-control: no-cache, no-store                                                                │
│ x-request-id: e9199733-54bd-4086-af69-d7eeccf00dee                                               │
│ server: envoy                                                                                    │
│ set-cookie: dsid=ced258d0da790089d2f9467c; Path=/; Secure; HttpOnly                              │
│ set-cookie: region=ap-south-1; Path=/; Secure                                                    │
│                                                                                                  │
│ Body  JSON, 316 B  [parsed · p: source]                                                          │
│ {                                                                                                │
│   "ok": true,                                                                                    │
│   "sessionId": "session_15bce3a5a963c9fde0ebe700e9d76981",                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   Enter fold   p parsed/source   | jq   ? help        ⚠ studio inspector present
