host/crates/tui/tests/snapshots/snapshots__detail_timeout_response.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(40.0, MEDIUM, path_ends(\"/recommendations\"), \"l\")"
---
 traffic-police  Pixel 8 [demo]  com.example.shop  pid 4312  ● LIVE  ✎ 1 rule active         60 requests · 5.0 MB in · 40 KB out · 2 failed
╭─ Network · all app traffic ─────────────────────────────────────────────────────────────────── ━ Receiving 3.9 KB/s   ━ Sending 759 B/s ─╮
│ 1.0 MB/s                  ⢀⡤⠤⠤⠤⠤⢤⣀⣀⣀⣀⡤⠤⠤⠤⠤⠤⠤⠤⠤⠤⣄⣀                                                                                        │
│                         ⢀⡴⠋              ┊      ⠈⠙⢦⡀                                                                                     │
│ 512 KB/s               ⣠⠞                ┊         ⠙⢦⣀                                                                                   │
│          ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡴⠃                 ┊           ⠈⠉⠓⠚⠉⠙⠒⠲⠤⣄⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀ │
│        0 ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ │
│                ⢀⡤⠤⠤⣄⣀⣀⣀⡤⠤⣄⡀   ⣀⡤⠤⠤⠤⣄⣀⣀⣀⣀ ┊                   ⢀⣠⢤⣀⣀⣀⣀⣀⣀⣀⣀⡤⠴⠒⠒⠒⠲⠤⢤⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣠⠤⠤⠤⣄⣀⣀  ⣀⣠⠤⠤⠤⠤⣄⣀⣀⣀⡀      ⣀⣀⡤⢤⣀⡀    ⣀⡤⠤⠤⠤⠖⠒⠒⠒ │
│ 4.0 KB/s ⠉⠙⠒⠦⠤⠞⠉          ⠙⠒⠒⠋⠁        ⠈⠉⠉⠉⠉⠉⠉⠉⠉⠉⠙⠲⣄       ⢀⡴⠋                                   ⠈⠉⠉⠁         ⠉⠓⠒⠒⠒⠚⠉⠁    ⠉⠓⠒⠒⠋⠁         │
│                                          ┊         ⠈⠳⣄⡀  ⣀⡤⠏                                                                             │
│ 8.0 KB/s                                 ┊            ⠉⠉⠉⠁                                                                               │
│              00:10.000            00:15.000             00:20.000            00:25.000            00:30.000            00:35.000         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 60 ─ Connection ─ Thread ─ Rules ───────────────────────────────╮ ╭─ recommendations?product… ─ Response body ─ Request body ──╮
│ Name                  Size  Type      Status         Time   Timeline      │ │ no response · SocketTimeoutException: timeout              │
│ token                364 B  json      200          513 ms                ▐│ │                                                            │
│ sessions             290 B  json      200          2.11 s                ▐│ │                                                            │
│ notifications        306 B  json      200          1.77 s                ▐│ │                                                            │
│ events                17 B  json      200          1.38 s                ▐│ │                                                            │
│ user_1024.png       4.9 KB  png       200          494 ms                ▐│ │                                                            │
│ notifications        306 B  json      200          1.33 s                ▐│ │                                                            │
│ products?catego…    1.0 KB  json      200          431 ms                ▐│ │                                                            │
│ config                 0 B            302           61 ms                ▐│ ╰────────────────────────────────────────────────────────────╯
│ ↪ config.json        103 B  json      200          315 ms                 │ ╭─ Overview ─ Response ─ Request ─ Call Stack ───────────────╮
│ items                149 B  json      200          2.79 s                 │ │ No response: java.net.SocketTimeoutException: timeout      │
│ metrics                6 B  protobuf  200          338 ms                 │ │                                                            │
│ notifications        306 B  json      200          1.65 s                 │ │                                                            │
│ events                17 B  json      200          1.09 s                 │ │                                                            │
│ promo-banner-v3…     148 B  json      404          277 ms                 │ │                                                            │
│ reviews               86 B  json      200          516 ms                 │ │                                                            │
│ notifications        306 B  json      200          1.72 s                 │ │                                                            │
│ checkout              99 B  json      200          2.33 s                 │ │                                                            │
│ cancel               305 B  html      500          222 ms                 │ │                                                            │
│ lookup?fields=c…     120 B  json      200          291 ms                 │ │                                                            │
│ notifications        306 B  json      200          1.42 s   ▍             │ │                                                            │
│ events                17 B  json      200          958 ms   ▎             │ │                                                            │
│ status?orderId=…     146 B  json      200          329 ms   ▏             │ │                                                            │
│ recommendations…                      failed       10.0 s   ████▍         │ │                                                            │
╰───────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
