host/crates/tui/tests/snapshots/snapshots__frozen.snap
---
source: crates/tui/tests/snapshots.rs
expression: "frame(12.0, MEDIUM, \"F\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● FROZEN  ✎ 1 rule active         26 requests · 13 KB in · 18 KB out
╭─ Network · all app traffic ──────────────────────────────────────────────────────────────────────────────── ━ Receiving —   ━ Sending — ─╮
│  16 KB/s                                                                             ┊                                                   │
│                                                                                      ┊                                                   │
│                                                                                      ┊            ┏━┓                                    │
│                                                                                      ┊            ┃ ┃                                    │
│ 8.0 KB/s                                                                             ┊            ┃ ┃                ┏━┓                 │
│                                                                                      ┊            ┃ ┗━┓  ┏┓      ┏━┓ ┃ ┃          ┏━┓    │
│                                                                                      ┊      ┏━┓━┓ ┃   ┗━┓┛┗━━┏━┓━┛ ┗━┓ ┏━━━━━━┓━━┓┃ ┃    │
│                                                                                      ━━┏━━━━┛ ┗━┗━┛ ┏━┛ ┗┓┏━━┛ ┗━━━┛ ┗━┛┓┏━━┓┏┗━━┗┛ ┗━┓━ │
│        0                                                                             ━━┛        ┗━━━┛    ┗┛             ┗┛  ┗┛    ┗━┛ ┗━ │
│                                                                                      00:00.000            00:05.000            00:10.000 │
╰─ ⏸ not following live · L ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ──────────────────────────────────────────────────────────────────────────────────────────────╮
│ Name                                                       Size Type      Status         Time Timeline                                   │
│ events                                                     17 B json      200          1.45 s                             ███            │
│ u_4821.png                                               4.5 KB png       200          476 ms                              █▏            │
│ monitor                                                   302 B json      200          1.53 s                               ██▎         ▐│
│ challenge                                                 144 B json      200          386 ms                               ▌           ▐│
│ config                                                      0 B           302           61 ms                                ▏          ▐│
│ ↪ config.json                                             106 B json      200          195 ms                                ▎          ▐│
│ attest                                                    180 B json      200          2.75 s                                ████▏      ▐│
│ metrics                                                     6 B protobuf  200          224 ms                                 ▏         ▐│
│ monitor                                                   302 B json      200          1.41 s                                 ▕█▉       ▐│
│ events                                                     17 B json      200          1.14 s                                  █▉       ▐│
│ liveness-model-v3.json                                    150 B json      404          346 ms                                   ▌       ▐│
│ enroll                                                     72 B json      200          2.08 s                                    ▐██▍   ▐│
│ documents                                                  93 B json      200          515 ms                                    █▎     ▐│
│ monitor                                                   302 B json      200          1.50 s                                    ▕█▊    ▐│
│ report                                                    305 B html      500          219 ms                                      ▏    ▐│
│ lookup?fields=country,region,carrier                      101 B json      200          507 ms                                       █   ▐│
│ monitor                                                   302 B json      200          1.49 s                                       ▐█▋ ▐│
│ status?sessionId=session_15bce3a5a963c9fde0ebe700e9d…     263 B json      200          326 ms                                       ▐▏  ▐│
│ threshold                                                                 ···          1.90 s                                        ▐██▐│
│ events                                                     17 B json      200          970 ms                                        ▐▉ ▐│
│ status?sessionId=session_15bce3a5a963c9fde0ebe700e9d…     263 B json      200          174 ms                                         ▕ ▐│
│ fonts.json                                                                canceled     380 ms                                         ▕▍▐│
│ monitor                                                                   ···          500 ms                                          █ │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 Enter open   Space pause   c collapse   s sort   Tab next panel   ? help       frozen: capture continues in the background · F to unfreeze
