host/crates/tui/tests/snapshots/snapshots__graph_captured_requests.snap
---
source: crates/tui/tests/snapshots.rs
expression: "frame(12.0, MEDIUM, \"T\")"
---
 traffic-police  Pixel 8 [demo]  com.example.shop  pid 4312  ● LIVE  ✎ 1 rule active          26 requests · 14 KB in · 18 KB out · 1 failed
╭─ Network · captured requests ───────────────────────────────────────────────────────────────── ━ Receiving 933 B/s   ━ Sending 1.7 KB/s ─╮
│ 8.0 KB/s                                                                                  ┊              ▁                               │
│                                                                                           ┊             ▆██▃                             │
│ 4.0 KB/s                                                                                  ┊            ▇████▅                            │
│                                                                                           ▁▁▁▂▂▂▂▁▁▁▁▂▇███████▆▄▂▁▁▁▂▃▄▅▅▄▃▂▂▂▂▃▄▄▄▄▃▃▄▄ │
│        0 ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ │
│                                                                                           ▔▔🮂🮃🮄🮅🮆🮅🮅🮄🮄▀▀▀🮄🮆██🮆🮅🮆█████🮅▀▀███████🮄▀🮄█████🮆▀ │
│ 3.0 KB/s                                                                                  ┊                     ▔🮂🮂    ▔█████▔    🮃🮄▀🮂   │
│                                                                                           ┊                             🮂███▔            │
│ 6.0 KB/s                                                                                  ┊                              ▔▀▔             │
│                                                                                           00:00.000            00:05.000                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ──────────────────────────────────────────────────────────────────────────────────────────────╮
│ Name                                                     Size  Type      Status         Time   Timeline                                  │
│ events                                                   17 B  json      200          1.38 s                              ██▌            │
│ user_1024.png                                          4.9 KB  png       200          494 ms                               █▍            │
│ notifications                                           306 B  json      200          1.33 s                                ▐█▎         ▐│
│ products?category=headphones&page=1                    1.0 KB  json      200          431 ms                                ▕▍          ▐│
│ config                                                    0 B            302           61 ms                                 ▏          ▐│
│ ↪ config.json                                           103 B  json      200          315 ms                                 ▌          ▐│
│ items                                                   149 B  json      200          2.79 s                                 ▕███▌      ▐│
│ metrics                                                   6 B  protobuf  200          338 ms                                  ▕▏        ▐│
│ notifications                                           306 B  json      200          1.65 s                                   ██▍      ▐│
│ events                                                   17 B  json      200          1.09 s                                   ▐▉       ▐│
│ promo-banner-v3.json                                    148 B  json      404          277 ms                                    █       ▐│
│ reviews                                                  86 B  json      200          516 ms                                     ▕▍     ▐│
│ notifications                                           306 B  json      200          1.72 s                                     ▕███   ▐│
│ checkout                                                 99 B  json      200          2.33 s                                     ▕███   ▐│
│ cancel                                                  305 B  html      500          222 ms                                       ▏    ▐│
│ lookup?fields=country,region,currency                   120 B  json      200          291 ms                                        █   ▐│
│ notifications                                           306 B  json      200          1.42 s                                        ▐█▌ ▐│
│ events                                                   17 B  json      200          958 ms                                        ▕█▏ ▐│
│ status?orderId=ord_15bce3a5a963c9fd                     146 B  json      200          329 ms                                         █  ▐│
│ recommendations?productId=p_1042                                         ···          1.90 s                                         ▐██▐│
│ fonts.json                                                               canceled     380 ms                                          ▕▍▐│
│ notifications                                                            ···          500 ms                                           ▐▐│
│ status?orderId=ord_15bce3a5a963c9fd                       0 B  json      200          413 ms                                           ▐ │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 Enter open   / filter   Space pause   m pin   y copy   e export   c collapse   s sort   ? help                    graph: captured requests
